# schoolmate-bot

./: .gitignore  LICENSE  README.md  pyproject.toml
bot/: __init__.py  bot.py
bot/utils/: database.py  storage.py
documentation/: database.md  exceptions.md  storage.md
